--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.20"
   },
   "dependencies": {
+    "@hennge/vue3-pagination": "^1.0.17",
     "@vee-validate/rules": "^4.7.3",
     "@vuepic/vue-datepicker": "^3.6.4",
     "@vueuse/core": "^9.9.0",
