--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "^9.9.0",
     "lodash": "^4.17.21",
     "v-click-outside": "^3.2.0",
-    "vee-validate": "^4.7.3"
+    "vee-validate": "^4.7.3",
+    "vue-multiselect": "^3.0.0-alpha.2"
   }
 }
