--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.2.0",
+    "@pinia-plugin-persistedstate/nuxt": "^1.0.0",
     "nuxt": "3.0.0",
     "nuxt-icon": "^0.1.8",
     "postcss": "^8.4.20"
   },
   "dependencies": {
     "@hennge/vue3-pagination": "^1.0.17",
+    "@nuxtjs/google-fonts": "^3.0.0-1",
+    "@pinia/nuxt": "^0.4.7",
     "@vee-validate/rules": "^4.7.3",
     "@vuepic/vue-datepicker": "^3.6.4",
     "@vueuse/core": "^9.9.0",
+    "aws-amplify": "^4.3.46",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.32",
     "v-click-outside": "^3.2.0",
     "vee-validate": "^4.7.3",
     "vue-multiselect": "^3.0.0-alpha.2"
