--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.0.32",
     "v-click-outside": "^3.2.0",
     "vee-validate": "^4.7.3",
-    "vue-multiselect": "^3.0.0-alpha.2"
+    "vue-multiselect": "^3.0.0-alpha.2",
+    "vue3-toastify": "^0.1.1"
   }
 }
