--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "v-click-outside": "^3.2.0",
     "vee-validate": "^4.7.3",
     "vue-multiselect": "^3.0.0-alpha.2",
+    "vue3-popper": "^1.5.0",
     "vue3-toastify": "^0.1.1"
   }
 }
