--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pinia": "^2.0.32",
     "v-click-outside": "^3.2.0",
     "vee-validate": "^4.7.3",
+    "vue-currency-input": "^3.0.4",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue3-popper": "^1.5.0",
     "vue3-toastify": "^0.1.1"
