--- a/package.json
+++ b/package.json
@@ -10,31 +10,27 @@
   },
   "devDependencies": {
     "@nuxt/postcss8": "^1.1.3",
-    "@nuxtjs/tailwindcss": "^6.2.0",
-    "@pinia-plugin-persistedstate/nuxt": "^1.0.0",
-    "nuxt": "3.0.0",
-    "nuxt-icon": "^0.1.8",
-    "nuxt-quasar-ui": "^1.7.3",
-    "postcss": "^8.4.20"
+    "@nuxtjs/tailwindcss": "^6.10.4",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "nuxt": "3.9.1",
+    "nuxt-icon": "^0.6.8",
+    "nuxt-quasar-ui": "^2.0.7",
+    "postcss": "^8.4.33"
   },
   "dependencies": {
     "@hennge/vue3-pagination": "^1.0.17",
     "@nuxtjs/dayjs": "^1.4.1",
-    "@nuxtjs/google-fonts": "^3.0.0-1",
-    "@pinia/nuxt": "^0.4.7",
-    "@quasar/extras": "^1.16.4",
-    "@vee-validate/rules": "^4.7.3",
-    "@vuepic/vue-datepicker": "^3.6.4",
-    "@vueuse/core": "^9.9.0",
-    "aws-amplify": "^5.0.16",
+    "@nuxtjs/google-fonts": "^3.1.3",
+    "@pinia/nuxt": "^0.5.1",
+    "@quasar/extras": "^1.16.9",
+    "@vee-validate/rules": "^4.12.4",
+    "@vueuse/core": "^10.7.2",
+    "aws-amplify": "^6.0.12",
     "lodash": "^4.17.21",
-    "pinia": "^2.0.32",
-    "quasar": "^2.12.0",
-    "v-click-outside": "^3.2.0",
-    "vee-validate": "^4.7.3",
-    "vue-currency-input": "^3.0.4",
-    "vue-multiselect": "^3.0.0-alpha.2",
-    "vue3-popper": "^1.5.0",
-    "vue3-toastify": "^0.1.1"
+    "pinia": "^2.1.7",
+    "quasar": "^2.14.2",
+    "vee-validate": "^4.12.4",
+    "vue-currency-input": "^3.0.5",
+    "vue3-toastify": "^0.2.1"
   }
 }
