--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "nuxt": "3.9.1",
+    "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
     "nuxt-quasar-ui": "^2.0.7",
     "postcss": "^8.4.33"
