--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
+    "@types/lodash": "^4.14.202",
     "nuxt": "^3.10.1",
     "nuxt-icon": "^0.6.8",
     "nuxt-quasar-ui": "^2.0.7",
-    "postcss": "^8.4.33"
+    "postcss": "^8.4.33",
+    "typescript": "^5.3.3",
+    "vue-tsc": "^1.8.27"
   },
   "dependencies": {
     "@hennge/vue3-pagination": "^1.0.17",
