--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
+    "v-money": "^0.8.1",
+    "v-money3": "^3.24.1",
     "vee-validate": "^4.12.4",
-    "vue-currency-input": "^3.0.5",
     "vue3-toastify": "^0.2.1"
   }
 }
