--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vee-validate/rules": "^4.12.4",
     "@vueuse/core": "^10.7.2",
     "aws-amplify": "^6.0.12",
+    "defu": "^6.1.4",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
@@ -36,5 +37,8 @@
     "v-money3": "^3.24.1",
     "vee-validate": "^4.12.4",
     "vue3-toastify": "^0.2.1"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
