--- a/mason.yaml
+++ b/mason.yaml
@@ -13,6 +13,8 @@ bricks:
   #     path: bricks/widget
   amplify:
     path: ./bricks/amplify
+  page:
+    path: ./bricks/page
   module:
     path: ./bricks/module
 
