--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
@@ -21,7 +22,6 @@
     "vue-tsc": "^1.8.27"
   },
   "dependencies": {
-    "@hennge/vue3-pagination": "^1.0.17",
     "@nuxtjs/dayjs": "^1.4.1",
     "@nuxtjs/google-fonts": "^3.1.3",
     "@pinia/nuxt": "^0.5.1",
@@ -33,7 +33,6 @@
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "quasar": "^2.14.2",
-    "v-money": "^0.8.1",
     "v-money3": "^3.24.1",
     "vee-validate": "^4.12.4",
     "vue3-toastify": "^0.2.1"
