--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@iconify/vue": "^4.1.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/tailwindcss": "^6.10.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@types/lodash": "^4.14.202",
     "nuxt": "^3.10.1",
-    "nuxt-icon": "^0.6.8",
+    "nuxt-icon": "^0.6.9",
     "nuxt-quasar-ui": "^2.0.7",
     "postcss": "^8.4.33",
     "typescript": "^5.3.3",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "consola": "^3.2.3"
   },
   "dependencies": {
     "@nuxtjs/dayjs": "^1.4.1",
